@@ -1,4 +1,7 @@
-2009-11-19  6.5.7-10 Cristy  <quetzlzacatenango@image...>
+2009-11-25  6.5.8-1 Jee Teck  <jee.teck@cteca...>
+  * The mogridy program +opaque option now recognizes its required argument.
+
+2009-11-19  6.5.8-0 Cristy  <quetzlzacatenango@image...>
   * Add magick/morphlogy.{c,h} source templates.
   * Sync image option when reading MPR images.
   * Optimize ping for SVG images.
